2007-02-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-02-00
	* new asynchronous state model: upon receiving a command
	(e.g. 'configure'), a transitional state is entered; at
	the end of the transitional state (e.g. 'configuring'), the
	transition into the target state (e.g. 'ready') is
	auto-triggered.
	* missing: the run control function manager needs to be notified
	of the transition into the target state. This will be done using
	the xdaq2rc package, which will be part of xdaq in version
	3.8. Until xdaq 2.8. is part of the CMSSW release, this tag and
	following tags are not going to be published to the TC.
	* The stop and halt commands have been tested and verified to work
	well. After halt, the allocated shared memory will be released
	cleanly.
	

2007-02-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-02
	* add stopAction() to FUResourceBroker.
	* add shutDownClients() method to FUResourceTable: a bunch of
	empty events are going to be scheduled which indicate the
	FUShmReader to shut down operation.
	* if the FUEventProcessor is 'halted' *before* the Broker is
	halted, the allocated shared memory should be released now.

2007-01-18  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-01
	* add xdaq parameter 'doFedIdCheck' to FUResourceBroker, default
	is true, should be set to false if the processed events are known
	not to comply with the fedIds of the real CMS detector. This is
	e.g. the case for the eFEDs. 

2007-01-17  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-01-00
	* add integer 'buIdToBeDiscarded_' and two binary semaphores to
	FUShmBuffer. Via the methods 'scheduleForDiscard()' and
	'buIdToBeDiscarded()', another thread can wait for a buId to be
	registered, access that number thread-safely, and send a discard
	to the builder unit.
	* the above mentioned 'other thread' is implemented as a WorkLoop