@@ -1,3 +1,9 @@
+2007-02-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-02-01
+	* add rcmsStateNotifier from xdaq2rc package: used to notify run
+	control of the self-triggered transition into the target state.
+
 2007-02-20  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-02-00
